--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Willy Wonkas - Personal Portfolio Website Template" />
-	<meta name="keywords" content="blog, business card, creative, creative portfolio, cv theme, online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme, vcard" />
-	<meta name="author" content="willy wonka" />
-    <title>Willy Wonkas - Personal Portfolio Website Template</title>
-  <!--favicon-img--> 
-   <link rel="icon" type="image/png" href="images/favicon.png">
-   <!--favicon-img-->
+    <meta name="description" content="Stijn Hogerwerf-  Personal Portfolio Website" />
+	<meta name="keywords" content="business card, creative, creative portfolio, cv theme, online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme, vcard" />
+	<meta name="author" content="stijn hogerwerf" />
+    <title>Stijn Hogerwerf - Personal Portfolio Website</title>
    <!--main css file should not be removed -->
     <link rel="stylesheet" href="css/index.css">
     <!--main css file-->
@@ -35,10 +32,7 @@
     <!--link-screen-->
         <!--Main-Section-->
         <!--Navigator-fullscreen-->
-        <div id="navigation-content">
-            <div class="logo">
-                <img src="images/willy wonka logo.png" alt="logo">
-            </div>
+        <div id="navigation-content">            
             <div class="navigation-close">
                 <span class="close-first"></span>
                 <span class="close-second"></span>
@@ -46,7 +40,6 @@
             <div class="navigation-links">
                 <a href="#" data-text="HOME" id="home-link" >HOME</a>
                 <a href="#" data-text="ABOUT" id="about-link" >ABOUT</a>
-                <a href="#" data-text="BLOG" id="blog-link" >BLOG</a>
                 <a href="#" data-text="PORTFOLIO" id="portfolio-link" >PORTFOLIO</a>
                 <a href="#" data-text="CONTACT" id="contact-link" >CONTACT</a>
             </div>
@@ -55,7 +48,6 @@
           <!--Home Page-->
         <!--Menubar-->
         <div id="navigation-bar">
-            <img src="images/willy wonka logo.png" alt="logo">
             <div class="menubar">
                 <span class="first-span"></span>
                 <span class="second-span"></span>
@@ -69,8 +61,7 @@
               <!--Social Media Links-->
             <div class="social-media-links">
                <a href="#"><img src="images/instagram logo.png" class="social-media" alt="instagram-logo"></a><!--Your instagram homepage link inser in place of "#"-->
-                <a href="#"><img src="images/facebook logo.png" class="social-media" alt="facebook-logo"></a>
-                <a href="#"><img src="images/linkedin logo.png" class="social-media" alt="linkedin-logo"></a>
+                <a href="https://www.linkedin.com/in/stijn-hogerwerf/"><img src="images/linkedin logo.png" class="social-media" alt="linkedin-logo"></a>
                 <a href="#"><img src="images/twitter logo.png" class="social-media" alt="twitter-logo"></a>
 
             </div>
@@ -84,16 +75,11 @@
             <span class="slash">|</span>
         </div>
                     <div class="contact">
-                <a href="Mailto:#"><img src="images/mail.png" alt="email-pic" class="contactpic"></a><!--Your email Id write in place of "#"-->
-                <a href="Tel:#"><img src="images/call.png" alt="phone-pic" class="contactpic"></a><!--Your telephone number Id write in place of "#"-->
+                <a href="Mailto:shogerwerf.work@gmail.com"><img src="images/mail.png" alt="email-pic" class="contactpic"></a><!--Your email Id write in place of "#"-->
+                <a href="Tel:0683920494"><img src="images/call.png" alt="phone-pic" class="contactpic"></a><!--Your telephone number Id write in place of "#"-->
                     </div>    
             </div>
-            </div>
-            <!--header image-->
-            <div class="header-image">
-            <img src="images/man.jpg" alt="logo">
-            </div>
-            <!--header image end-->
+            </div>            
         </div>
            <!--Header End-->
         <!--HomePage End-->
