Added correct skills

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <span class="color">Game Developer</span>
                      based in Amsterdam , the Netherlands </span>
                      <br>
-               <span class="about-second-line"> With 4 years of experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step while working.</span>
+               <span class="about-second-line"> With 3.5 years of experience as a student Game Developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step while working.</span>
                <div class="cv">
                 <a href="#"><button>Download <span class="colors">CV</span></button></a>
             </div>
@@ -126,7 +126,7 @@
                                <img src="images/coding.png" alt="service-one">
                                </div>
                                <div class="service-description">
-                                <h2>Web Designing</h2>
+                                <h2>Unity</h2>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quibusdam possimus</p>
                                </div>
                            </div>
@@ -135,19 +135,10 @@
                                <img src="images/instagram.png" alt="service-two">
                                </div>
                                <div class="service-description">
-                                <h2>Social Media</h2>
+                                <h2>Scrum</h2>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quibusdam possimus</p>
                                </div>
-                           </div>
-                           <div class="service-three service wow">
-                            <div class="service-img">
-                               <img src="images/bulb.png" alt="service-three">
-                            </div>
-                            <div class="service-description">
-                                <h2>Creative Design</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quibusdam possimus</p>
-                            </div>
-                        </div>
+                           </div>                           
                     </div>
             </div>
             <!--services content end-->
@@ -160,63 +151,44 @@
                     <div class="skill-html skill">
                         <div class="skill-text">
                     <div class="html">
-                        HTML/CSS
+                        C#
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="html-progress wow">95%</div>
+                 <div class="csharp-progress wow">70%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
                         <div class="skill-text">
                     <div class="html">
-                      Javascript
+                      Kotlin
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="js-progress wow">90%</div>
+                 <div class="kotlin-progress wow">30%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
                         <div class="skill-text">
                     <div class="html">
-                        Adobe Ps
+                        Java
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="adobe-progress wow">83%</div>
+                 <div class="java-progress wow">40%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
                         <div class="skill-text">
                     <div class="html">
-                        PHP
+                        Blender
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="php-progress wow">87%</div>
+                 <div class="blender-progress wow">50%</div>
                     </div>
-                    </div>
-                    <div class="skill-html skill">
-                        <div class="skill-text">
-                    <div class="html">
-                        JQuery
-                    </div>
-                        </div>
-                    <div class="html-prog wow prog">
-                 <div class="jquery-progress wow">94%</div>
-                    </div>
-                    </div>
-                    <div class="skill-html skill">
-                        <div class="skill-text">
-                    <div class="html">
-                        SEO
-                    </div>
-                        </div>
-                    <div class="html-prog wow prog">
-                 <div class="seo-progress wow">84%</div>
-                    </div>
-                    </div>
+                    </div>               
+                    
                 </div>
             </div>   
         </div>
