--- a/index.html
+++ b/index.html
@@ -123,20 +123,20 @@
                     <div class="services-content">
                            <div class="service-one service wow">
                                <div class="service-img">
-                               <img src="images/coding.png" alt="service-one">
+                               <img src="images/unity.png" alt="service-one">
                                </div>
                                <div class="service-description">
                                 <h2>Unity</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quibusdam possimus</p>
+                                <p>Most of my projects where made in unity. So I am the most comfortable working in unity.</p>
                                </div>
                            </div>
                            <div class="service-two service wow">
                                <div class="service-img">
-                               <img src="images/instagram.png" alt="service-two">
+                               <img src="images/scrum.png" alt="service-two">
                                </div>
                                <div class="service-description">
                                 <h2>Scrum</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quibusdam possimus</p>
+                                <p>While working on these projects I used the SCRUM-method of workign</p>
                                </div>
                            </div>                           
                     </div>
@@ -233,6 +233,7 @@
                     </div>
                 </div>                             
              </div>
+        </div>
         <!--portfolio end-->        
         <!--CONTACT-page-->
      <div id="contact">        
