--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                      <br>
                <span class="about-second-line"> With 3.5 years of experience as a student Game Developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step while working.</span>
                <div class="cv">
-                <a href="#"><button>Download <span class="colors">CV</span></button></a>
+                <a href="/images/Dutch/Curriculum Vitae Stijn Hogerwerf.pdf" download="CVStijn"><button>Download <span class="colors">CV</span></button></a>
             </div>
             </div>
             <!--about picture-->
