Added novice and expert to skills

--- a/index.html
+++ b/index.html
@@ -148,45 +148,58 @@
                      My <span class="color"> Skills</span>
                 </div>
                 <div class="skills-content " style="text-align: center;">
+                    <!--C#-->
                     <div class="skill-html skill">
                         <div class="skill-text">
-                    <div class="html">
-                        C#
-                    </div>
+                            <div class="html">
+                                C#
+                            </div>
+                            
                         </div>
-                    <div class="html-prog wow prog">
-                 <div class="csharp-progress wow">70%</div>
+                        <div class="html-prog wow prog">
+                            <div class="csharp-progress wow"></div>                                            
+                        </div> 
+                        <div class="leftProficiency">Novice</div> 
+                        <div class="rightProficiency">Expert </div>
                     </div>
-                    </div>
+                    <!--Kotlin-->
                     <div class="skill-html skill">
                         <div class="skill-text">
-                    <div class="html">
-                      Kotlin
-                    </div>
+                            <div class="html">
+                            Kotlin
+                            </div>
                         </div>
-                    <div class="html-prog wow prog">
-                 <div class="kotlin-progress wow">30%</div>
+                        <div class="html-prog wow prog">
+                            <div class="kotlin-progress wow"></div>
+                        </div>
+                        <div class="leftProficiency">Novice</div> 
+                        <div class="rightProficiency">Expert </div>
                     </div>
-                    </div>
+                    <!--Java-->
                     <div class="skill-html skill">
                         <div class="skill-text">
-                    <div class="html">
-                        Java
-                    </div>
+                            <div class="html">
+                                Java
+                            </div>
                         </div>
-                    <div class="html-prog wow prog">
-                 <div class="java-progress wow">40%</div>
+                        <div class="html-prog wow prog">
+                            <div class="java-progress wow"></div>
+                        </div>
+                        <div class="leftProficiency">Novice</div> 
+                        <div class="rightProficiency">Expert </div>
                     </div>
-                    </div>
+                    <!--Blender-->
                     <div class="skill-html skill">
                         <div class="skill-text">
-                    <div class="html">
-                        Blender
-                    </div>
+                            <div class="html">
+                                Blender
+                            </div>
                         </div>
-                    <div class="html-prog wow prog">
-                 <div class="blender-progress wow">50%</div>
-                    </div>
+                        <div class="html-prog wow prog">
+                            <div class="blender-progress wow"></div>
+                        </div>
+                        <div class="leftProficiency">Novice</div> 
+                        <div class="rightProficiency">Expert </div>
                     </div>               
                     
                 </div>
