Added own image

--- a/index.html
+++ b/index.html
@@ -93,21 +93,27 @@
                     <span class ="header-caption">Get to Know <span class="color"> me.</span></span>
                 </div>
                 <div class="about-main">
-            <div class="about-first-paragraph wow">
-            <!--about description-->
-               <span class="about-first-line">
-                    I'm creative 
-                    <span class="color">Game Developer</span>
-                     based in Amsterdam , the Netherlands </span>
-                     <br>
-               <span class="about-second-line"> With 3.5 years of experience as a student Game Developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step while working.</span>
-               <div class="cv">
-                <a href="/images/Dutch/Curriculum Vitae Stijn Hogerwerf.pdf" download="CVStijn"><button>Download <span class="colors">CV</span></button></a>
-            </div>
-            </div>
+                    <div class="about-first-paragraph wow">
+                        <!--about description-->
+                        <span class="about-first-line">
+                            I'm creative 
+                            <span class="color">Game Developer</span>
+                            based in Amsterdam , the Netherlands 
+                        </span>
+                        <br>
+                        <span class="about-second-line"> With 3.5 years of experience as a student Game Developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step while working.                            
+                        </span>
+                        <div class="cv">
+                            <a href="/images/Dutch/Curriculum Vitae Stijn Hogerwerf.pdf" download="CVStijn">
+                                <button>Download 
+                                    <span class="colors">CV</span>
+                                </button>
+                            </a>
+                        </div>
+                     </div>
             <!--about picture-->
             <div class="about-img">
-                <img src="images/about.jpg" alt="Your Image">
+                <img src="images/Personal/HeadImage.png" alt="Your Image">
             </div>
             </div>
     
