Fixed some grammar

--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
                 <div class="header-content-box">
                 <div class="firstline"><span class="color">Stijn </span>Hogerwerf</div>
                 <div class="secondline">
-                I'm a
             <span class="txt-rotate color" data-period="1200"data-rotate='[ " Game Developer." ]'></span>
             <span class="slash">|</span>
         </div>
@@ -96,7 +95,7 @@
                     <div class="about-first-paragraph wow">
                         <!--about description-->
                         <span class="about-first-line">
-                            I'm creative 
+                            I'm a creative 
                             <span class="color">Game Developer</span>
                             based in Amsterdam , the Netherlands 
                         </span>
@@ -111,12 +110,11 @@
                             </a>
                         </div>
                      </div>
-            <!--about picture-->
-            <div class="about-img">
-                <img src="images/Personal/HeadImage.png" alt="Your Image">
-            </div>
-            </div>
-    
+                    <!--about picture-->
+                    <div class="about-img">
+                        <img src="images/Personal/HeadImage.png" alt="Your Image">
+                    </div>
+                </div>    
             </div>
             <!--services start-->
             <div id="services">                
