Changed some words

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="navigation-links">
                 <a href="#" data-text="HOME" id="home-link" >HOME</a>
                 <a href="#" data-text="ABOUT" id="about-link" >ABOUT</a>
-                <a href="#" data-text="PORTFOLIO" id="portfolio-link" >PORTFOLIO</a>
+                <a href="#" data-text="PROJECTS" id="portfolio-link" >PROJECTS</a>
                 <a href="#" data-text="CONTACT" id="contact-link" >CONTACT</a>
             </div>
         </div>
@@ -212,7 +212,7 @@
         <!--about end-->
         <!--PORTFOLIO-page-->
         <div id="portfolio">            
-            <div class="portfolio-header"> <span class="color"> My </span> Portfolio
+            <div class="portfolio-header"> <span class="color"> My </span> Projects
             <span class ="header-caption"> Some Of My <span class="color"> Work</span></span></div>
              <div id="portfolio-content">
                  <div class="portfolio portfolio-first">
@@ -231,8 +231,7 @@
                     </div>
                     <div class="portfolio-text">
                         <h2>Airport Architect</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id cumque placeat minima ad laudantium suscipit
-                             voluptatem ducimus. Id cumque placeat minima ad laudantium suscipit voluptatem ducimus</p>
+                        <p>Airport Architect is a grid-based airport builder game in which you build and manage your airport, continuously expand it, and become the ultimate Airport Tycoon.</p>
                         <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
@@ -243,8 +242,7 @@
                     </div>
                     <div class="portfolio-text">
                         <h2>Shadowed Escape</h2>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad ut optio repellat cupiditate expedita eius dignissimos
-                            .. Id cumque placeat minima ad laudantium suscipit voluptatem ducimus</p>
+                        <p>Shadowed Escape is a horror survival game where players explore a dark forest, gathering car parts to repair their vehicle, and evade a sound-sensitive monster that hunts based on noise and light.</p>
                         <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>                             
@@ -259,7 +257,7 @@
             <!--Contact form-->
              <div class="contact-form">
                  <div class="form-header">
-                     Message Me
+                     Email Me
                  </div>
                  <form id="myForm" action="#">
                     <div class="input-line">
