Working on phone

--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
             <!--services start-->
             <div id="services">                
             <!--services header-->
-                    <div class="services-heading wow">
-                        <span class="color">My</span> Services
-                    </div>
+                <div class="services-heading">
+                    <span class="color">My</span> Services
+                </div>
             <!--services header end-->
             <!--services content-->
-                    <div class="services-content">
+                    <div class="services-content">                        
                            <div class="service-one service wow">
                                <div class="service-img">
                                <img src="images/unity.png" alt="service-one">
@@ -223,7 +223,7 @@
                          <h2>Go Home</h2>
                          <p>Go home is a 3rd person strategy based hack and slash tower defense game where you as the captain must go from planet to planet to collect resources and to get back to your home planet.</p>
                          <div class="button-container"> 
-                            <div class="button"><a href="https://bram-van-den-dongen.itch.io/go-home" target="_blank"><button><span class="index">Download<i class="gg-arrow-right"></i></span></button></a></div>
+                            <div class="button"><a href="https://bram-van-den-dongen.itch.io/go-home" target="_blank"><button><span class="index">Download Page<i class="gg-arrow-right"></i></span></button></a></div>
                             <div class="button"><a href="#"><button><span class="index">Learn More<i class="gg-arrow-right"></i></span></button></a></div>
                             <div class="button"><a href="https://github.com/Hotoroti/Go-Home" target="_blank"><button><span class="index">Repository<i class="gg-arrow-right"></i></span></button></a></div>
                         </div>
@@ -252,7 +252,7 @@
                         <h2>Shadowed Escape</h2>
                         <p>Shadowed Escape is a horror survival game where players explore a dark forest, gathering car parts to repair their vehicle, and evade a sound-sensitive monster that hunts based on noise and light.</p>
                         <div class="button-container"> 
-                            <div class="button"><a href="https://hotoroti.itch.io/shadowed-escape" target="_blank"><button><span class="index">Download<i class="gg-arrow-right"></i></span></button></a></div>
+                            <div class="button"><a href="https://hotoroti.itch.io/shadowed-escape" target="_blank"><button><span class="index">Download Page<i class="gg-arrow-right"></i></span></button></a></div>
                             <div class="button"><a href="#"><button><span class="index">Learn More<i class="gg-arrow-right"></i></span></button></a></div>
                             <div class="button"><a href="https://github.com/Hotoroti/Shadowed-Escape" target="_blank"><button><span class="index">Repository<i class="gg-arrow-right"></i></span></button></a></div>
                         </div>
