Added english CV

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <span class="about-second-line"> With 3.5 years of experience as a student Game Developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step while working.                            
                         </span>
                         <div class="cv">
-                            <a href="/images/Dutch/Curriculum Vitae Stijn Hogerwerf.pdf" download="CVStijn">
+                            <a href="/images/English/CV English Stijn Hogerwerf.pdf" download="CVStijn">
                                 <button>Download 
                                     <span class="colors">CV</span>
                                 </button>
