Added black for linkedin profile

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div id="particles"></div>
               <!--Social Media Links-->
             <div class="social-media-links">
-                <a href="https://www.linkedin.com/in/stijn-hogerwerf/"><img src="images/linkedin logo.png" class="social-media" alt="linkedin-logo"></a>
+                <a href="https://www.linkedin.com/in/stijn-hogerwerf/" target="_blank"><img src="images/linkedin logo.png" class="social-media" alt="linkedin-logo"></a>
 
             </div>
             <!--Social Media Links end-->
@@ -69,8 +69,8 @@
             <span class="slash">|</span>
         </div>
                     <div class="contact">
-                <a href="Mailto:shogerwerf.work@gmail.com"><img src="images/mail.png" alt="email-pic" class="contactpic"></a><!--Your email Id write in place of "#"-->
-                <a href="Tel:0683920494"><img src="images/call.png" alt="phone-pic" class="contactpic"></a><!--Your telephone number Id write in place of "#"-->
+                <a href="Mailto:shogerwerf.work@gmail.com"><img src="images/mail.png" alt="email-pic" class="contactpic" target="_blank"></a><!--Your email Id write in place of "#"-->
+                <a href="Tel:0683920494"><img src="images/call.png" alt="phone-pic" class="contactpic" target="_blank"></a><!--Your telephone number Id write in place of "#"-->
                     </div>    
             </div>
             </div>            
