Added new cv and more skills

--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
                             based in Amsterdam , the Netherlands 
                         </span>
                         <br>
-                        <span class="about-second-line"> With 3.5 years of experience as a student Game Developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step while working.                            
+                        <span class="about-second-line"> With 4 years of experience as a student Game Developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step while working.                            
                         </span>
                         <div class="cv">
-                            <a href="/images/English/CV English Stijn Hogerwerf.pdf" download="CVStijn">
+                            <a href="/images/English/CV Stijn Hogerwerf_English.pdf" download="CVStijn">
                                 <button>Download 
                                     <span class="colors">CV</span>
                                 </button>
@@ -187,6 +187,19 @@
                         <div class="leftProficiency">Novice</div> 
                         <div class="rightProficiency">Expert </div>
                     </div>
+                    <!--Godot-->
+                    <div class="skill-html skill">
+                        <div class="skill-text">
+                            <div class="html">
+                                Godot
+                            </div>
+                        </div>
+                        <div class="html-prog wow prog">
+                            <div class="godot-progress wow"></div>
+                        </div>
+                        <div class="leftProficiency">Novice</div> 
+                        <div class="rightProficiency">Expert </div>
+                    </div>      
                     <!--Blender-->
                     <div class="skill-html skill">
                         <div class="skill-text">
@@ -200,7 +213,19 @@
                         <div class="leftProficiency">Novice</div> 
                         <div class="rightProficiency">Expert </div>
                     </div>               
-                    
+                     <!--Aseprite-->
+                    <div class="skill-html skill">
+                        <div class="skill-text">
+                            <div class="html">
+                                Aseprite
+                            </div>
+                        </div>
+                        <div class="html-prog wow prog">
+                            <div class="aseprite-progress wow"></div>
+                        </div>
+                        <div class="leftProficiency">Novice</div> 
+                        <div class="rightProficiency">Expert </div>
+                    </div>      
                 </div>
             </div>   
         </div>
